@@ -1,5 +1,8 @@
 2023-06-17  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
+	Regenerated.
+
 	* Makefile (ELCS, INFOFILES, EMACS, EMACSFLAGS): New variables.
 	(.PHONY): Add keywords target.
 	(all): Build ELCS and INFOFILES by default.
